--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   fluttertoast: ^8.2.2
   image_picker: ^1.1.1
   intl: ^0.19.0
+  cloud_firestore: ^4.17.4
+  firebase_auth: ^4.20.0
+  syncfusion_flutter_calendar: ^25.2.7+1
 
 
 
